--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "framer-motion": "^6.5.1",
     "json-server": "^0.17.1",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
